fix stackoverflow

--- a/src/BlazorUI/Demo/Client/Bit.BlazorUI.Demo.Client.Core/Pages/Components/Utilities/SwipeTrap/BitSwipeTrapDemo.razor.scss
+++ b/src/BlazorUI/Demo/Client/Bit.BlazorUI.Demo.Client.Core/Pages/Components/Utilities/SwipeTrap/BitSwipeTrapDemo.razor.scss
@@ -1,6 +1,6 @@
 ﻿.trap-container {
-    width: 200px;
-    height: 300px;
+    width: 277px;
+    height: 500px;
     display: flex;
     align-items: center;
     flex-direction: column;
